# burnout

./: .gitignore  README.md  f2-standings-scraper.py  fia-document-scraper.py  main.py  pyproject.toml  season-preview.ipynb
f1-telemetry/: app.py  constants.py
notebooks/: lawson-drop.ipynb  season-preview.ipynb  track-effects-driver.ipynb  track-effects.ipynb
pit-wall/: app.py  constants.py  dockerfile  requirements.txt
pyburnout/: pyproject.toml
pyburnout/scrapers/: __init__.py  f2.py  fia.py
pyburnout/src/pyburnout/scrapers/: f2.py
pyburnout/src/pyburnout/utils/: __init__.py  steering.py  themes.py
reports/: after-race.html  after-race.qmd
research-projects/win-probability/data/: driver-lap-data-bahrain.csv  driver-lap-data-monza.csv  driver-results-bahrain.csv  driver-results-monza.csv  result-fetch-v2.py  results-fetch.py  telemetry-fetch.py
research-projects/win-probability/exploration/: win-probability.ipynb
track-layouts/: australia.avif
