[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyburnout"]

[project]
name = "pyburnout"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Khalid Talakshi", email = "khalid.talakshi@outlook.com"},
]
urls = {Repository = "https://github.com/khalid-talakshi/burnout}
description = "Code for the Burnouts F1 Podcast"
keywords = ["f1", "python", "data", "api"]
dependencies = ["requests", "beautifulsoup4", "urllib3"]
