[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyburnout"
version = "1.0.0"
requires-python = ">=3.11"
authors = [{ name = "Khalid Talakshi", email = "khalid.talakshi@outlook.com" }]
description = "Code for the Burnouts F1 Podcast"
keywords = ["f1", "python", "data", "api"]
dependencies = ["requests", "beautifulsoup4", "urllib3", "numpy"]

[project.urls]
Repository = "https://github.com/khalid-talakshi/burnout"
